--- a/ChatClientCS/App.xaml
+++ b/ChatClientCS/App.xaml
@@ -56,7 +56,7 @@
             </Style>
             
             <utils:ViewModelLocator x:Key="VMLocator"/>
-            <BitmapImage x:Key="BlankImage" UriSource="/SignalChat;component/Imgs/blank.png"/>
+            <BitmapImage x:Key="BlankImage" UriSource="/InstantMessagingApp;component/Imgs/blank.png"/>
             <utils:ByteBitmapSourceConverter x:Key="ByteBmpSrcConverter"/>
         </ResourceDictionary>
 
